client/beam.css
/* 			
00CC00	269926	008500	39E639	67E667
FF7400	BF7130	A64B00	FF9640	FFB273
CD0074	992667	85004B	E6399B	E667AF
*/

a {
    font-weight: bold;
    text-decoration: none;
    color: black;
}
body {
    background-color: black;
    font-family: sans-serif, arial, verdana;
    max-width: 1200px;
    padding: 10px;
}
div.thread span.from {
    font-weight: bold;
    color: #c00000;
}
div.searchResults, div.searchBar, div.roots {
    border: 0px solid black;
    min-height: 20px;
    margin: 5px;
    padding: 10px;
    background-color: #f0f0f0;
    overflow: auto;
}
div.thread {
    border: 0px solid black;
    min-height: 20px;
    margin: 10px;
    padding: 10px;
    background-color: #ffffff;
    overflow: auto;
}
div.searchResults a {
}
div.roots span.comments {
    padding-left: 10px;
}
div.article {
    overflow: auto;
}
div.thread a {
    float: right;
}
div.thread span.date {
    float: right;
}
div.thread a.permalink {
    float: right;
    font-weight: bold;
}
div.logo {
    float: right;
    padding: 5px;
    padding-left: 20px;
    height: 100%;
}
a.thumbnail {
    padding-left: 10px;
}

